# juce-test

./: .gitignore  CMakeLists.txt  build.sh
JUCE/lib/cmake/JUCE-8.0.6/: LV2_HELPER-noconfig.cmake  LV2_HELPER.cmake  VST3_HELPER-noconfig.cmake  VST3_HELPER.cmake
src/: PluginEditor.cpp  PluginProcessor.cpp
